# peroxide-cryptsetup

./: .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS.md  Cargo.toml  README.md  TASKS.todo  build.rs  peroxide-cryptsetup-qubes.spectemplate  rustfmt.toml
dracut/modules.d/92peroxs/: module-setup.sh  parse-peroxs.sh  peroxs-open.sh  peroxs@.service
lib/: .gitignore
lib/cryptsetup-rs/: Cargo.toml
lib/cryptsetup-rs/blkid-rs/: Cargo.toml
lib/cryptsetup-rs/blkid-rs/src/: lib.rs
lib/cryptsetup-rs/libcryptsetup-sys/: Cargo.toml  build.rs  lib.rs
lib/cryptsetup-rs/src/: device.rs  lib.rs
lib/cryptsetup-rs/tests/: tests.rs
lib/ttypass/: Cargo.toml
lib/ttypass/src/: lib.rs
lib/ykpers-rs/: Cargo.toml
lib/ykpers-rs/libykpers-sys/: Cargo.toml  build.rs
lib/ykpers-rs/libykpers-sys/src/: lib.rs
lib/ykpers-rs/src/: lib.rs
qubes-rust-fc23/: Dockerfile
src/lib/: context.rs  db.rs  db.rs.in  device.rs  io.rs  lib.rs  model.rs  yubikey.rs
src/lib/input/: keyfile.rs  mod.rs  pinentry.rs  terminal.rs  yubikey.rs
src/lib/operation/: enroll.rs  list.rs  mod.rs  newdb.rs  open.rs  register.rs
test-scripts/: newdb-and-enroll-twice-luks2.sh  newdb-and-open-luks2.sh  newdb-and-open.sh
tests/: support.rs  test_context.rs  test_enroll.rs  test_open.rs  test_yubikey.rs  tests.rs
