[package]
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "Command-line utility for managing LUKS encrypted volumes using 2FA methods (for example Yubikeys)"
homepage = "https://gitlab.com/solidninja/peroxide-cryptsetup"
repository = "https://gitlab.com/solidninja/peroxide-cryptsetup"
keywords = ["cli", "cryptsetup", "luks"]
license = "GPL-3.0"
name = "peroxide-cryptsetup"
readme = "README.md"
version = "0.3.2"
edition = "2021"
rust-version = "1.60"

[badges]
gitlab = { repository = "solidninja/peroxide-cryptsetup" }

[[bin]]
doc = false
name = "peroxs"
test = false

[dependencies]
clap = "3.2.17"
clap_derive = "3.2.17"
env_logger = "0.9.0"
errno = "0.2.8"
libc = "0.2.132"
log = "0.4.17"
prettytable-rs = "0.9.0"
secstr = "0.5.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
snafu = { version = "0.7.1", features = ["backtraces"] }
sodiumoxide = { version = "0.2.7", optional = true }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
vec1 = "1.8.0"

[dependencies.ttypass]
path = "lib/ttypass"
version = "0.3.1"

[dependencies.ykpers-rs]
optional = true
path = "lib/ykpers-rs"
version = "0.3.1"

[dependencies.cryptsetup-rs]
# path = "../cryptsetup-rs"
version = "0.3.2"

[dependencies.pinentry-rs]
optional = true
# path = "../pinentry-rs"
version = "0.2.0"

[dev-dependencies]
expectest = "0.12.0"
tempfile = "3.3.0"

[features]
default = ["pinentry", "yubikey", "yubikey_hybrid"]
yubikey = ["dep:ykpers-rs"]
yubikey_hybrid = ["yubikey", "dep:sodiumoxide"]
pinentry = ["dep:pinentry-rs"]

[lib]
name = "peroxide_cryptsetup"
path = "src/lib/lib.rs"

[workspace]
members = [
    "lib/ttypass",
    "lib/ykpers-rs",
    "lib/ykpers-rs/libykpers-sys",
]
