[workspace]
members = [
    "lib/ttypass",
    "lib/ykpers-rs",
    "lib/ykpers-rs/libykpers-sys",
]
default-members = [
    "lib/ttypass",
    "lib/ykpers-rs",
    "lib/ykpers-rs/libykpers-sys"
]

[workspace.package]
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
edition = "2021"
homepage = "https://gitlab.com/solidninja/peroxide-cryptsetup"
repository = "https://gitlab.com/solidninja/peroxide-cryptsetup"
rust-version = "1.64"
version = "0.3.2"

[package]
description = "Command-line utility for managing LUKS encrypted volumes using 2FA methods (for example Yubikeys)"
keywords = ["cli", "cryptsetup", "luks"]
license = "GPL-3.0"
name = "peroxide-cryptsetup"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[badges]
gitlab = { repository = "solidninja/peroxide-cryptsetup" }

[[bin]]
doc = false
name = "peroxs"
test = false

[dependencies]
clap = { version = "4.0.0-rc.2", features = ["color", "derive"] }
env_logger = "0.9.0"
errno = "0.2.8"
log = "0.4.17"
prettytable-rs = "0.9.0"
secstr = "0.5.0"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
snafu = { version = "0.7.1", features = ["backtraces"] }
sodiumoxide = { version = "0.2.7", optional = true }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
vec1 = "1.8.0"

[dependencies.ttypass]
path = "lib/ttypass"
version = "0.3.2"

[dependencies.ykpers-rs]
optional = true
path = "lib/ykpers-rs"
version = "0.3.2"

[dependencies.cryptsetup-rs]
# path = "../cryptsetup-rs"
version = "0.3.2"

[dependencies.pinentry-rs]
optional = true
# path = "../pinentry-rs"
version = "0.2.0"

[dev-dependencies]
expectest = "0.12.0"
tempfile = "3.3.0"

[features]
default = ["pinentry", "yubikey", "yubikey_hybrid"]
yubikey = ["dep:ykpers-rs"]
yubikey_hybrid = ["yubikey", "dep:sodiumoxide"]
pinentry = ["dep:pinentry-rs"]

[lib]
name = "peroxide_cryptsetup"
path = "src/lib/lib.rs"