[package]
name = "cryptsetup-rs"
version = "0.1.0"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
license = "LGPL-3.0"

[lib]
name = "cryptsetup_rs"

[dependencies]
libc = "*"
errno = "*"
uuid = "*"
log = "*"

[dependencies.libcryptsetup-sys]
version = "0.1.0"
path = "libcryptsetup-sys"

[dependencies.blkid-rs]
version = "0.1.0"
path = "blkid-rs"

[dev-dependencies]
env_logger = "*"
tempdir = "*"
expectest = "*"

[[test]]
name = "tests"