[package]
name = "cryptsetup-rs"
version = "0.1.0"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
license = "LGPL-3.0"

[lib]
name = "cryptsetup_rs"

[dependencies]
libc = "0.2"
errno = "0.2"
uuid = "0.3"
log = "0.3"

[dependencies.libcryptsetup-sys]
version = "0.1.0"
path = "libcryptsetup-sys"

[dependencies.blkid-rs]
version = "0.1.0"
path = "blkid-rs"

[dev-dependencies]
env_logger = "0.3"
tempdir = "0.3"
expectest = "0.3"

[[test]]
name = "tests"
