[package]
name = "cryptsetup-rs"
version = "0.1.1"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
license = "LGPL-3.0"
description = "Rust wrapper around the libcryptsetup library, allowing manipulation of LUKS devices in Linux"
homepage = "https://github.com/solidninja/peroxide-cryptsetup"

[lib]
name = "cryptsetup_rs"

[dependencies]
libc = "0.2"
errno = "0.2"
uuid = "0.4"
log = "0.3"

[dependencies.libcryptsetup-sys]
version = "0.1.0"
path = "libcryptsetup-sys"

[dependencies.blkid-rs]
version = "0.1.0"
path = "blkid-rs"

[dev-dependencies]
env_logger = "0.3"
tempdir = "0.3"
expectest = "0.3"

[[test]]
name = "tests"
