[package]
name = "ttypass"
version = "0.3.0"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
license = "LGPL-3.0"
description = "Tiny library to read passwords from terminal windows"
homepage = "https://gitlab.com/solidninja/peroxide-cryptsetup"
edition = "2021"

[dependencies]
libc = "0.2.104"
termios = "0.3.2"
