[package]
description = "Tiny library to read passwords from terminal windows"
license = "LGPL-3.0"
name = "ttypass"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
libc = "0.2.104"
termios = "0.3.2"
