[package]
name = "ykpers-rs"
version = "0.2.0-beta1"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
license = "LGPL-3.0"
description = "Rust wrapper around the Yubikey-personalization library, allowing interaction with Yubikey hardware"
homepage = "https://gitlab.com/solidninja/peroxide-cryptsetup"
edition = "2018"

[lib]
name = "ykpers_rs"

[dependencies]
libc = "0.2.71"
errno = "0.2.5"
log = "0.4.8"
libykpers-sys = { path = "libykpers-sys", version = "0.2.0-beta1" }

[dev-dependencies]
env_logger = "0.7.1"
tempdir = "0.3.7"
expectest = "0.12.0"

# [[test]]
# name = "tests"

