[package]
description = "Rust wrapper around the Yubikey-personalization library, allowing interaction with Yubikey hardware"
license = "LGPL-3.0"
name = "ykpers-rs"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "ykpers_rs"

[dependencies]
libc = "0.2.104"
errno = "0.2.7"
log = "0.4.14"
libykpers-sys = { path = "libykpers-sys", version = "0.3.2" }

[dev-dependencies]
env_logger = "0.9.0"
tempdir = "0.3.7"
expectest = "0.12.0"

# [[test]]
# name = "tests"

