[package]
name = "libykpers-sys"
version = "0.2.0-beta1"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "FFI bindings to libykpers"
license = "LGPL-3.0"
homepage = "https://gitlab.com/solidninja/peroxide-cryptsetup"
edition = "2018"

links = "ykpers-1"
build = "build.rs"

[lib]
name = "libykpers_sys"

[dependencies]
libc = "0.2.71"

[build-dependencies]
pkg-config = "0.3.17"
