[package]
name = "libykpers-sys"
version = "0.3.1"
authors = ["Vladimir Lushnikov <vladimir@solidninja.is>"]
description = "FFI bindings to libykpers"
license = "LGPL-3.0"
homepage = "https://gitlab.com/solidninja/peroxide-cryptsetup"
edition = "2021"

links = "ykpers-1"
build = "build.rs"

[lib]
name = "libykpers_sys"

[dependencies]
libc = "0.2.104"

[build-dependencies]
pkg-config = "0.3.21"
