[package]
description = "FFI bindings to libykpers"
license = "LGPL-3.0"
name = "libykpers-sys"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

links = "ykpers-1"
build = "build.rs"

[lib]
name = "libykpers_sys"

[dependencies]
libc = "0.2.104"

[build-dependencies]
pkg-config = "0.3.21"
